style/style.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');

* {
  margin: 0px;
  padding: 0px;
  /*box-sizing: border-box;*/
  font-family: 'Ubuntu', sans-serif;
}

/********** NAVBARS **********/
nav {
  background-color: rgba(0, 0, 0, 0.8);
}

nav a {
  color: white;
}

nav a:hover {
  color: #7f54a3;
}

/********** JUMBOTRON **********/
.jumbotron {
  background-image: url("../img/ruralvscity-3.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto 100%;
  box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
  height: 100vh;
}

.jumbotron .container-lg {
  text-align: center;
  padding: 0 0 0 0;
}

.jumbotron-img {
  width: 960px;
  height: auto;
  margin: 0 auto 0 auto;
}

/********** Group Img Section **********/
.group-img {
  width: 80%;
  max-width: 500px;
  height: auto;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/********** About Us Section **********/
.about-us-section {
  height: 100%;
  text-align: center;
}


/********** RATE CARD SECTION **********/

.rate-card-section {
  padding-top: 6vh;
  height: 100%;
  text-align: center;
}

.rate-card-links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.rate-card-links>a {
  margin: 16px 8px 0px;
}

/********** COLLEGIAN MEDIA KIT **********/

.media-kit-section {
  padding-top: 6vh;
  padding-bottom: 2vh;
  height: 100%;
  text-align: center;

}

.carousel-item {
  max-height: 100%;
}

.all-slides {
  display: none;
  max-height: 75vh;
  margin-bottom: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/********** FlyteDesk Link Section **********/

.storeFlytedesk {
  margin: 0 auto 10px auto;
  max-width: 100%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/********** BUTTON **********/
.btn-purple {
  background-color: #7f54a3;
  color: white;
}

.btn-purple:hover {
  background-color: white;
  color: #7f54a3;
  border: 2px solid #7f54a3;
  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
}

.btn-dark {
  padding: 5px 10px 5px 10px;
  margin: 10px auto 10px auto;
}

.display-left-btn {
  margin-right: 25px;
  margin-bottom: 25px;
}

.display-right-btn {
  margin-left: 25px;
}

.pdf-fullscreen {
  text-align: right;
  display: block;
  margin: 0 23% 0 auto;
}

/********** CONTACT US SECTION **********/
.contact-us-section {
  padding-top: 10vh;
  height: 100%;
}

.contact-us-section {
  text-align: center;
}

.email-area {
  max-width: 650px;
  margin-bottom: 30px;
}

.email-area button {
  background-color: #7f54a3;
  border-color: #7f54a3;
}

.email-area button:hover {
  background-color: #a373ca;
  border-color: #a373ca;
}

/********** FOOTER **********/

footer a {
  color: black;
}

footer a:hover {
  color: #7f54a3;
  text-decoration: none;
}

/*********** 404 Page  ***********/

.pg404 {
  height: 100vh;
  padding: 15% 0 0 0;
  line-height: 4em;
}

.pg404 h1 {
  color: #7f54a3;
}

/********** RESPONSIVE MEDIA **********/

/* Medium devices (tablets, 960px and down) */
@media (max-width: 980px) {
  .jumbotron-img {
    width: 760px;
  }

  .all-slides {
    width: 500px;
  }

}


/* Medium devices (tablets, 960px and down) */
@media (max-width: 959px) {
  .jumbotron-img {
    width: 760px;
  }

}


/* Medium devices (tablets, 768px and down) */
@media (max-width: 768px) {
  .jumbotron-img {
    width: 580px;
    height: auto;
  }
}

/* Small devices (landscape phones, 576px and down) */
@media (max-width: 576px) {

  .nav {
    display: none;

  }

  .jumbotron {
    background-image: none;
    background-color: #7f54a3;
    height: auto;
  }

  .jumbotron-img {
    width: 375px;
  }

  .all-slides {
    width: 300px;
  }

  .pdf-fullscreen {
    margin: 0 15% 0 auto;
  }

  .contact-us-img {
    width: 300px;
  }

  .footer-links {
    padding-top: 5px;
  }

  #comingSoonh1 {
    font-size: 3em !important;
  }

}

